[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/assets/LoginReg page.png" type="Texture" id=1]
[ext_resource path="res://UI/Registration.gd" type="Script" id=2]

[node name="Registration" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 2, 2 )
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 28.0
margin_top = 40.0
margin_right = 320.0
margin_bottom = 320.0
custom_constants/separation = 10
alignment = 1

[node name="Username" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 62.0
margin_right = 292.0
margin_bottom = 86.0
custom_constants/separation = 35

[node name="Label" type="Label" parent="VBoxContainer/Username"]
margin_top = 5.0
margin_right = 39.0
margin_bottom = 19.0
text = "Email:"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/Username"]
margin_left = 74.0
margin_right = 284.0
margin_bottom = 24.0
custom_constants/minimum_spaces = 50
caret_blink = true

[node name="Password" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 96.0
margin_right = 292.0
margin_bottom = 120.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="VBoxContainer/Password"]
margin_top = 5.0
margin_right = 64.0
margin_bottom = 19.0
text = "Password:"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/Password"]
margin_left = 74.0
margin_right = 284.0
margin_bottom = 24.0
custom_constants/minimum_spaces = 50
secret = true
caret_blink = true

[node name="Confirm" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 130.0
margin_right = 292.0
margin_bottom = 154.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="VBoxContainer/Confirm"]
margin_top = 5.0
margin_right = 54.0
margin_bottom = 19.0
text = "Confirm:"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/Confirm"]
margin_left = 74.0
margin_right = 284.0
margin_bottom = 24.0
custom_constants/minimum_spaces = 50
secret = true
caret_blink = true

[node name="address" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 164.0
margin_right = 292.0
margin_bottom = 188.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="VBoxContainer/address"]
margin_top = 5.0
margin_right = 82.0
margin_bottom = 19.0
text = "NFT address:"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/address"]
margin_left = 102.0
margin_right = 284.0
margin_bottom = 24.0
custom_constants/minimum_spaces = 43
secret = true
caret_blink = true

[node name="Buttons" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 198.0
margin_right = 292.0
margin_bottom = 218.0

[node name="Register" type="Button" parent="VBoxContainer/Buttons"]
margin_right = 64.0
margin_bottom = 20.0
text = "Register"

[node name="Back" type="Button" parent="VBoxContainer/Buttons"]
margin_left = 68.0
margin_right = 110.0
margin_bottom = 20.0
text = "Back"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Notification" type="AcceptDialog" parent="."]
anchor_left = 0.251
anchor_top = 0.244
anchor_right = 0.251
anchor_bottom = 0.244
margin_left = -97.28
margin_top = -51.68
margin_right = -0.280029
margin_bottom = 6.31999
rect_scale = Vector2( 2, 2 )
dialog_text = "Debug Mode"

[connection signal="pressed" from="VBoxContainer/Buttons/Register" to="." method="_on_Register_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/Back" to="." method="_on_Back_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
